[package]
name = "yowsl"
version = "0.1.2"
authors = ["Yoshito Komatsu <ykomatsu@akaumigame.org>"]
description = "Yet another Windows Subsystem for Linux tweaker"
repository = "https://bitbucket.org/ykomatsu/yowsl"
readme = "README.md"
keywords = ["cli", "windows", "wsl"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.0.1"
clap = "2.27.1"
failure = "0.1.0"
failure_derive = "0.1.0"
libloading = "0.4.2"
