[package]
name = "yowsl"
version = "0.1.4"
authors = ["Yoshito Komatsu <ykomatsu@akaumigame.org>"]
description = "Yet another Windows Subsystem for Linux tweaker"
homepage = "https://yowsl.akaumiga.me/"
repository = "https://bitbucket.org/ykomatsu/yowsl"
readme = "README.md"
keywords = ["cli", "windows", "wsl"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.0.1"
clap = "2.29.2"
failure = "0.1.1"
libloading = "0.5.0"
